<resources>
    <string name="app_name">ZumanUI</string>
    <string name="title_activity_mode">Mode</string>
    <string name="ssh_ip_hint">Enter SSH Ip</string>
    <string name="stream_ip_hint">Enter Stream ip:port</string>
    <string name="manned_mode">Manned Mode</string>
    <string name="autonomous_mode">Autonomous Mode</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="go">Go</string>
    <string name="ssh_username">username</string>
    <string name="ssh_password">password</string>
    <string name="distance_txt">Distance</string>
    <string name="send_btn">Send</string>
    <string name="degree_txt">Degree</string>
    <string name="switch_light_btn">Switch Light</string>
    <string name="camera_control_txt">Camera Control</string>
    <string name="yaw_txt">Yaw</string>
    <string name="pitch_txt">Pitch</string>
    <string name="enter_command_txt">Enter Command</string>
    <string name="manned_check">Manned</string>

    <string-array name="places_array">
        <item>Choose Position…</item>
        <item>Position1</item>
        <item>Position2</item>
        <item>Position3</item>
        <item>Position4</item>
    </string-array>

</resources>
